<resources>
    <string name="app_name">Car_Service_Station</string>
    <string name="action_settings">Settings</string>

    <string name="mail_label">E-mail</string>
    <string name="pass_label">Password</string>
    <string name="welcome_label">Not Registered?Follow the steps bellow</string>
    <string name="login_text">Sign In</string>
    <string name="register_text">Register</string>
    <string name="cancel_text">Cancel</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="name_label">Name</string>
    <string name="surname_label">Surname</string>
    <string name="age_label">Age</string>
    <string name="address_label">Address</string>
    <string name="pass_confirm_label">Confirm</string>
    <string name="tel_label">Tel</string>
    <string name="title_activity_dash_board">DashBoard</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="app_title">Service Station</string>
    <string name="title_activity_job">Job Activity</string>

    <string name="title_sample">Title</string>
    <string name="value_sample">Value</string>
    <string name="take_job">Take Job</string>
</resources>
