<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".RegisterActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/appTitle"
            android:text="@string/app_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textSize="45sp"
            android:textColor="#000000"
            />

        <EditText
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/name_label"
            android:id="@+id/nameValue"
            android:layout_below="@+id/appTitle"/>

        <EditText
            android:layout_below="@+id/nameValue"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/surname_label"
            android:id="@+id/surnameValue"
            />

        <EditText
            android:layout_below="@+id/surnameValue"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/age_label"
            android:ems="10"
            android:width="60dp"
            android:id="@+id/ageValue"
            />

        <EditText
            android:layout_below="@+id/ageValue"
            android:layout_marginTop="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/tel_label"
            android:width="180dp"
            android:id="@+id/telValue"
            />

        <EditText
            android:layout_below="@id/telValue"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:hint="@string/address_label"
            android:id="@+id/addressValue"
            />

        <EditText
            android:layout_below="@+id/addressValue"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/mail_label"
            android:id="@+id/mailValue"
            />

        <EditText
            android:layout_below="@+id/mailValue"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass_label"
            android:id="@+id/passValue"
            />

        <EditText
            android:layout_below="@id/passValue"
            android:layout_marginTop="20dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/pass_confirm_label"
            android:id="@+id/passConfirmValue"
            />
        <Button
            android:layout_below="@+id/passConfirmValue"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_text"
            android:background="#14F197"
            android:textColor="#000000"
            android:id="@+id/register"/>
    </RelativeLayout>
</ScrollView>
