<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <TextView
        android:id="@+id/appTitle"
        android:text="@string/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textSize="45sp"
        android:textColor="#000000"
        />

    <EditText
        android:layout_below="@+id/appTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:id="@+id/userEmail"
        android:textSize="23sp"
        android:hint="@string/mail_label"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:width="280dp"/>

    <EditText
        android:layout_below="@+id/userEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/userPassword"
        android:textSize="23sp"
        android:hint="@string/pass_label"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:width="280dp"/>

    <Button
        android:layout_below="@+id/userPassword"
        android:layout_marginTop="30dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_text"
        android:id="@+id/login_btn"
        android:background="#14F197"
        android:textColor="#000000"
        />

    <TextView
        android:layout_marginTop="20dp"
        android:singleLine="false"
        android:textSize="25sp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/login_btn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/welcome_label"
        android:id="@+id/welcomeText"
        android:textColor="#000000"/>
    <Button
        android:layout_marginBottom="10dp"
        android:layout_alignParentBottom="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_text"
        android:id="@+id/reg_btn"
        android:background="#14F197"
        android:textColor="#000000"/>
</RelativeLayout>

